@@ -216,10 +216,11 @@ endif()
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
   message("Warning:")
-  message("Warning: MSVC support is currently experimental.")
-  message("Warning: If running cmake from MSYS2, make sure specifically direct CMake to MSVC!")
-  message("Warning: compatible libraries, or disable them entirely.  For example, trying to")
-  message("Warning: use the MSYS2 version of libTIFF wont' work with MSVC.")
+  message("Warning: If running cmake from MSYS2, make sure to specifically direct CMake to use")
+  message("Warning: MSVC compatible libraries only.  For example, trying to use the MSYS2 versions")
+  message("Warning: of libTIFF or GTest will not work with MSVC.  If you don't have compatible ")
+  message("Warning: versions, then simply disable the features using command line options like")
+  message("Warning: -DO_TIFF=NO and -DO_GTEST=NO.")
   message("Warning:")
 endif()
 
