@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-01-29 Wed 10:51 -->
+<!-- 2025-01-29 Wed 14:17 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-01-28 16:20:05</i></td>
+<td class="org-left"><i>2025-01-29 14:05:17</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-01-29 10:51:20</i></td>
+<td class="org-left"><i>2025-01-29 14:17:18</i></td>
 </tr>
 </tbody>
 </table>
@@ -291,7 +291,7 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 </ul></li>
 <li>API breaking Changes
 <ul class="org-ul">
-<li>N/A</li>
+<li>mjr::ramCanvasTpl::readTIFFfile now has new exit codes (23 &amp; 24 &#x2013; see below).</li>
 </ul></li>
 <li>Deprecated functionality
 <ul class="org-ul">
@@ -299,8 +299,17 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 </ul></li>
 <li>New functionality
 <ul class="org-ul">
+<li>MSVC:
+<ul class="org-ul">
+<li>With the switch to GTest, the unit tests are simple to run against MSVC.</li>
+<li>Removed "experimental" warning when configuring with MSVC.</li>
+<li>Added hints about how to use cmake in MSYS2 with MSVC &#x2013; not recommended, but it can be done.</li>
+<li>Updated wMean tests to avoid integer cases on cast.</li>
+</ul></li>
 <li>mjr::ramCanvasTpl::readTIFFfile: Added error 23: Image is tiled.</li>
 <li>mjr::ramCanvasTpl::readTIFFfile: Added error 24: Image has a palette.</li>
+<li>New method colorTpl::channelArithFlt2clrChan</li>
+<li>Added warning to wMean method regarding the vulgarities of floating point arithmetic and casts</li>
 </ul></li>
 <li>Documentation
 <ul class="org-ul">
@@ -319,8 +328,10 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 </ul></li>
 <li>Miscellaneous
 <ul class="org-ul">
-<li>Broke utest_colorTpl.cpp up into diffrent files</li>
+<li>Broke utest_colorTpl.cpp up into different files</li>
 <li>Added IncludeMRMathCPPLib.cmake code</li>
+<li>Updated version of configure.sh</li>
+<li>Updated mrw2any.sh &amp;</li>
 </ul></li>
 </ul>
 </div>
